# novahouse-chatbot-api

./: .dockerignore  .env.example  .env.staging  .flake8  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  API_KEY_SETUP.md  AUDIT.md  AUDIT_EXECUTION_SUMMARY.md  AUDYT_CZATU_2025_12_11.md  AUTOMATION_COMPLETE.md  BACKUP_SYSTEM.md  CHANGELOG.md  DASHBOARD_AUDIT.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_SUCCESS_20251114.md  DEPLOY_GUIDE.md  DOCS_INDEX.md  Dockerfile  FINAL_STATUS_TIER1.md  FINAL_SUMMARY.md  GIT_CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_V2.3.md  INSTRUKCJA_GIT.md  INTEGRATION_GUIDE.md  LICENSE  LINKI_NOTION.md  LOAD_TESTING.md  Makefile  NAPRAW_TERMINAL.md  NAPRAW_WSZYSTKO_COMPLETE.md  Notatki Marcina  PRODUCTION_READINESS.md  PRODUCTION_READY_VERIFICATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  (+52 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
config/: .coveragerc  .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.yaml  app.yaml.example  cloudbuild.yaml  docker-compose.yml  gunicorn.conf.py  pytest.ini
deploy/: gunicorn.service
docs/: ADMIN_DASHBOARD.md  ANALIZA_KOSZTOW_I_KONFIGURACJI.md  ARCHITECTURE_REVIEW.md  AUDIT_LOG.md  AUDYT_2025_12_12.md  AUDYT_CODE_QUALITY.md  AUDYT_CZATA_KOMPLEKSOWY_2025_12_12.md  AUDYT_DATABASE_PERFORMANCE.md  AUDYT_DEPENDENCIES.md  AUDYT_NAPRAWY.md  AUDYT_POSTEP_2025_12_12.md  AUDYT_RODO.md  AUDYT_SECURITY_NAPRAWY.md  AUTOMATION_GUIDE.md  BACKUP_AUTOMATION.md  BACKUP_DECRYPT_INSTRUKCJA.md  BACKUP_INSTRUKCJA.md  BEZPIECZENSTWO_PODSUMOWANIE.md  BEZPIECZENSTWO_SEKRETOW.md  BRANCH_PROTECTION.md  CI_CD_SETUP.md  COMPREHENSIVE_AUDIT_REPORT_03_12_2025.md  COMPREHENSIVE_AUDIT_REPORT_2025_12.md  CRON_SETUP.md  DASHBOARD_ADMIN.md  DEEP_AUDIT_2025-12-03.md  DIAGNOSTYKA_ZAPETLANIA.md  DIAGNOSTYKA_ZAPETLANIA_FINALNA.md  ENTERPRISE_FEATURES.md  ERROR_LOG.md  EXTRACTION_SAFEGUARDS.md  FAQ_CHATBOT.md  FINALNE_PODSUMOWANIE.md  FIX_DASHBOARD_MIGRATION.md  FIX_GCP_PERMISSIONS.md  FULL_E2E_SCENARIOS.md  GCP_ERROR_REPORTING_GUIDE.md  GITHUB_SECRETS_SETUP.md  GIT_HISTORY_PURGE.md  GOTOWOSC_DO_WDROZENIA.md  (+31 more)
migrations/: MIGRACJA_EMAIL_INSTRUKCJA.md  README  add_ab_testing_and_competitive_intel.py  add_analytics_indexes.py  add_chat_conversation_email_column.py  add_context_data_column.py  add_email_column_standalone.py  add_email_column_to_chat_conversations.py  add_lead_verification_fields.py  add_lead_verification_fields.sql  add_missing_indexes.py  ensure_chat_conversation_id_column.py  env.py  run_email_migration.py  run_lead_verification_production.py  run_migration_gcloud.py  run_migration_simple.py  run_production_migration.py
scripts/: add_monday_columns.py  auto-update-hook.sh  auto_push.sh  backup_db.py  check-deps.py  check_chatbot_logs.sh  check_deployment_ready.sh  check_secret_expiration.py  check_secrets_security.py  clean_monday_leads.py  cron_telegram_health_check.txt  deploy_production.sh  enhanced_logger.py  generate-update.sh  generate_changelog.py  generate_clients.sh  generate_credentials.py  health_check.sh  install-vscode-extensions.sh  monitor.sh  monitor_cron.sh  monitor_logs.py  monitoring_dashboard.py  pre_commit_security_check.sh  purge_secrets_from_history.sh  quick_commit.sh  quick_commit_no_hooks.sh  remove_secrets_from_git.sh  run_local_groq.sh  setup.py  setup_ab_competitive.sh  start.sh  stop.sh  telegram_health_check.py  test_chatbot_e2e.py  test_integrity_check.py  test_lead_scoring.py  test_monday_integration.py  test_no_numpy.py  test_openai_connection.py  (+3 more)
src/: api_v1.py  data_import.py  exceptions.py  main.py  main.py.backup2
templates/: admin_dashboard.html  rodo_audit.html
tests/: benchmark.py  conftest.py  locustfile.py  profile_api.py  smoke_tests.py  test_analytics.py  test_api.py  test_audit_conversations.py  test_backup.py  test_backup_decrypt.py  test_chatbot.py  test_conversations.py  test_conversations_manual.md  test_customer_journey_comprehensive.py  test_e2e_chatbot.py  test_e2e_mocked.py  test_final_security.py  test_input_validation_and_gpt_guard.py  test_integrations.py  test_knowledge.py  test_leads_rate_limit.py  test_llm_engine.py  test_llm_security.py  test_monday.py  test_polish_declension.py  test_production_reliability.py  test_rate_limiting.py  test_refactoring.py  test_rodo.py  test_session_timeout.py  test_smoke_production.py  test_upload_validation.py  test_user_routes.py  test_validation.py
updates/: AKTUALIZACJA_PROJEKTU_V2.3.md  DEPLOYMENT_SUCCESS_20251114.md  IMPLEMENTATION_COMPLETE.md  README.md  (+5 more)
(+385 files in other folders)
