[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novahouse-chatbot-api"
version = "2.3.1"
description = "AI Chatbot for NovaHouse - customer support for finish packages"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NovaHouse Team", email = "dev@novahouse.pl"}
]
keywords = ["chatbot", "ai", "flask", "real-estate", "customer-service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "Flask==3.1.1",
    "flask-cors==6.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "gunicorn==21.2.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "requests==2.31.0",
    "SQLAlchemy==2.0.41",
    "typing_extensions==4.14.0",
    "Werkzeug==3.1.3",
    "psycopg2-binary==2.9.11",
    "google-generativeai",
    "PyYAML==6.0.2",
    "langdetect==1.0.9",
    "redis==5.2.0",
    "Flask-SocketIO==5.3.7",
    "python-socketio==5.11.4",
    "eventlet==0.37.0",
    "Pillow==11.1.0",
    "google-cloud-storage==2.18.2",
    "twilio==9.3.7",
    "APScheduler==3.10.4",
    "Whoosh==2.7.4",
    "sentry-sdk[flask]==2.18.0",
    "python-dotenv==1.0.1",
    "alembic==1.13.2",
    "flask-migrate==4.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.0",
    "black==24.3.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.9.0",
    "coverage-badge==1.1.2",
]
test = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "locust==2.32.3",
    "snakeviz==2.2.0",
]
docs = [
    "sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
]

[project.urls]
Homepage = "https://github.com/MrCanon19/novahouse-chatbot-api"
Documentation = "https://glass-core-467907-e9.ey.r.appspot.com/api-docs"
Repository = "https://github.com/MrCanon19/novahouse-chatbot-api"
Issues = "https://github.com/MrCanon19/novahouse-chatbot-api/issues"

[project.scripts]
novahouse-chatbot = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "build",
    "dist",
    "migrations",
]
per-file-ignores = [
    "__init__.py:F401",
    "src/knowledge/novahouse_info.py:E501,W291",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = [
    "venv/",
    "build/",
    "dist/",
]

[tool.alembic]
script_location = "migrations"
prepend_sys_path = "."
version_path_separator = "os"
